--- a/src/main/resources/public/reparatur-drucken.html
+++ b/src/main/resources/public/reparatur-drucken.html
@@ -15,7 +15,7 @@
         <table class="head">
           <tr>
             <td class="left verdana size7" width="45%" style="border-style: solid; border-width: 1;" height="59">
-              NR: {{entity.nummer}}
+              NR: {{filiale.kuerzel}}{{entity.nummer}}
             </td>
             <td width="45%" style="border-style: none; border-width: medium;" rowspan="3" height="152">
               <span style="position: absolute; left: 400; top: -16; z-index: -1">
@@ -302,7 +302,7 @@
             </td>
             <td width="10%" style="border-top-style: none; border-top-width: medium; border-bottom-style: none; border-bottom-width: medium">&nbsp;</td>
             <td width="50%" style="border-style: solid; border-width: 1" align="right">
-              <font face="Verdana" size="7">NR: {{entity.nummer}}</font>
+              <font face="Verdana" size="7">NR: {{filiale.kuerzel}}{{entity.nummer}}</font>
             </td>
           </tr>
         </table>
@@ -310,7 +310,7 @@
         <table border="1" cellpadding="0" cellspacing="0" style="border-width:0; border-collapse: collapse; " bordercolor="#111111" width="100%" height="64">
           <tr>
             <td width="45%" style="border-style: solid; border-width: 1; " align="left" height="1">
-              <font face="Verdana" size="7">NR: {{entity.nummer}}</font>
+              <font face="Verdana" size="7">NR: {{filiale.kuerzel}}{{entity.nummer}}</font>
             </td>
             <td width="45%" style="border-style:none; border-width:medium; " rowspan="3" height="62"></td>
             <td width="10%" style="border-right:1px solid #111111; border-left-style:solid; border-left-width:1; border-top-style:solid; border-top-width:1; border-bottom-style:solid; border-bottom-width:1" align="center" height="1">
