Kundenverwaltung trennen von Reparaturverwaltung
* Kundenverwaltung einzeln aufrufbar
* Anordnung der Navigationsleiste verbessert
* Reparaturaufträge nicht löschen, wenn Kunde gelöscht wird

--- a/src/main/resources/public/kunden.html
+++ b/src/main/resources/public/kunden.html
@@ -17,7 +17,6 @@
   <body>
     <div id="kunden">
       <page-header></page-header>
-      <page-header-reparatur v-bind:marker="'Kunden'"></page-header-reparatur>
       <div id="content">
         <div class="form m1">
           <div class="m2m">
@@ -73,7 +72,6 @@
   <script src="/scripts/header.component.js"></script>
   <script src="/scripts/grid.component.js"></script>
   <script src="/scripts/delete.dialog.component.js"></script>
-  <script src="/scripts/reparatur/kunde.edit.dialog.component.js"></script>
-  <script src="/scripts/reparatur/reparatur.header.component.js"></script>
-  <script src="/scripts/reparatur/kunden.js"></script>
+  <script src="/scripts/kunde/kunde.edit.dialog.component.js"></script>
+  <script src="/scripts/kunde/kunden.js"></script>
 </html>
