--- a/src/main/resources/public/rechnung-uebersicht.html
+++ b/src/main/resources/public/rechnung-uebersicht.html
@@ -83,8 +83,8 @@
   <script src="/scripts/grid.component.js"></script>
   <script src="/scripts/delete.dialog.component.js"></script>
   <script src="/scripts/reparatur/reparatur.suchen.dialog.component.js"></script>
-  <script src="/scripts/reparatur/reparatur.kunde.suchen.dialog.component.js"></script>
-  <script src="/scripts/reparatur/kunde.edit.dialog.component.js"></script>
+  <script src="/scripts/kunde/kunde.suchen.dialog.component.js"></script>
+  <script src="/scripts/kunde/kunde.edit.dialog.component.js"></script>
   <script src="/scripts/rechnung/rechnungsposten.edit.dialog.component.js"></script>
   <script src="/scripts/rechnung/rechnung.edit.dialog.component.js"></script>
   <script src="/scripts/rechnung/rechnung.header.component.js"></script>
