--- a/src/main/resources/public/reparatur.html
+++ b/src/main/resources/public/reparatur.html
@@ -113,8 +113,8 @@
   <script src="/scripts/messages.dialog.component.js"></script>
   <script src="/scripts/header.component.js"></script>
   <script src="/scripts/grid.component.js"></script>
-  <script src="/scripts/reparatur/reparatur.kunde.suchen.dialog.component.js"></script>
-  <script src="/scripts/reparatur/kunde.edit.dialog.component.js"></script>
+  <script src="/scripts/kunde/kunde.suchen.dialog.component.js"></script>
+  <script src="/scripts/kunde/kunde.edit.dialog.component.js"></script>
   <script src="/scripts/reparatur/reparatur.header.component.js"></script>
   <script src="/scripts/reparatur/reparatur.js"></script>
 </html>
