--- a/src/main/resources/public/rechnung-drucken.html
+++ b/src/main/resources/public/rechnung-drucken.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>Reparaturauftrag drucken - Computer-Insel Tools by Sita Geßner</title>
+    <title>Rechnung drucken - Computer-Insel Tools by Sita Geßner</title>
     <link rel="icon" href="/themes/icons/zahnrad.png">
     <link rel="stylesheet" href="/themes/css/reparaturauftrag.css">
     <script type="text/javascript" src="/scripts/vendor/vue.min.js"></script>
