--- a/src/main/resources/public/kunden.html
+++ b/src/main/resources/public/kunden.html
@@ -20,7 +20,7 @@
       <div id="content">
         <div class="form m1">
           <div class="m2m">
-            <label for="searchForm_nachname">Nachname</label>
+            <label for="searchForm_nachname">Nachname/Firmenname</label>
             <input class="m2" id="searchForm_nachname" type="text" v-model="grid.searchQuery.nachname"></input>
           </div>
           <div class="m2">
