--- a/src/main/resources/public/produkt.html
+++ b/src/main/resources/public/produkt.html
@@ -34,16 +34,22 @@
                 <option :value="g.key" v-for="g in gruppen">{{g.value}}</option>
               </select>
             </div>
-            <div class="m1">
-              <label for="searchForm_bezeichnung">Bezeichnung</label>
-              <input class="m1" id="searchForm_bezeichnung" type="text" v-model="grid.searchQuery.bezeichnung"></input>
+          </div>
+          <div class="m1">
+            <label for="searchForm_bezeichnung">Bezeichnung</label>
+            <input class="m1" id="searchForm_bezeichnung" type="text" v-model="grid.searchQuery.bezeichnung"></input>
+          </div>
+          <div class="m1">
+            <div class="m2m">
+              <label for="searchForm_ean">EAN</label>
+              <input class="m2" id="searchForm_ean" type="text" v-model="grid.searchQuery.ean" />
             </div>
           </div>
           <div class="m1">
             <button class="right" title="Suchen" v-on:click="grid.reload = true;">Suchen</button>
           </div>
         </div>
-        <div style="height: 200px;"></div>
+        <div style="height: 250px;"></div>
         <div id="gridDiv" v-if="grid.gridColumns.length > 0">
           <grid
             :actions="grid.actions"
