Rechnungstext für Hinweis zum Besuch der anderen Filiale dynamisch einstellbar gestalten

--- a/src/main/resources/public/rechnung-drucken.html
+++ b/src/main/resources/public/rechnung-drucken.html
@@ -179,7 +179,7 @@
         <tr>
           <td width="200%" align="center" colspan="2"><font face="Arial">
             <p><font face="Arial" style="font-size: 9pt">Besuchen Sie uns auch in unserer
-              Filiale in Leipzig - Marktstraße 10.</font>
+              Filiale in {{filiale.rechnungTextAndereFiliale}}.</font>
             </p>
             <font style="font-size: 9pt"><br>
             Firmensitz: Marktstraße 10, 04177 Leipzig<br>
