--- a/src/main/resources/public/kassenbuch-drucken.html
+++ b/src/main/resources/public/kassenbuch-drucken.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <div id="kassenbuch-drucken">
-      <h3>Kassenbuch vom {{ formatDate(entity.kassenbuch.datum) }}</h3>
+      <h3>Kassenbericht vom {{ formatDate(entity.kassenbuch.datum) }}</h3>
       <table>
         <thead>
           <th style="width: 100px;">Datum</th>
