--- a/src/main/resources/public/kategorie.html
+++ b/src/main/resources/public/kategorie.html
@@ -10,13 +10,14 @@
     <link rel="stylesheet" href="/themes/css/radio.css">
     <link rel="stylesheet" href="/themes/css/raster.css">
     <link rel="stylesheet" href="/themes/css/style.css">
+    <link rel="stylesheet" href="/themes/css/tabs.css">
     <script type="text/javascript" src="/scripts/vendor/vue.min.js"></script>
     <script type="text/javascript" src="/scripts/vendor/axios.min.js"></script>
   </head>
   <body>
     <div id="kategorie">
       <page-header></page-header>
-      <page-header-inventar v-bind:marker="'Kategorie'"></page-header-inventar>
+      <page-header-inventar v-bind:marker="'Kategorien'"></page-header-inventar>
       <div id="content">
         <div class="form m1">
           <div class="m1">
