--- a/src/main/resources/public/rechnung-uebersicht.html
+++ b/src/main/resources/public/rechnung-uebersicht.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="/themes/css/radio.css">
     <link rel="stylesheet" href="/themes/css/raster.css">
     <link rel="stylesheet" href="/themes/css/style.css">
+    <link rel="stylesheet" href="/themes/css/tabs.css">
     <script type="text/javascript" src="/scripts/vendor/vue.min.js"></script>
     <script type="text/javascript" src="/scripts/vendor/axios.min.js"></script>
     <script type="text/javascript" src="/scripts/vendor/moment.min.js"></script>
@@ -17,7 +18,7 @@
   <body>
     <div id="rechnungen">
       <page-header></page-header>
-      <page-header-rechnung v-bind:marker="'Reparaturen'"></page-header-rechnung>
+      <page-header-rechnung v-bind:marker="'Rechnungen'"></page-header-rechnung>
       <div id="content">
         <div class="form m1" v-if="kundeId === null">
           <div class="m1">
