--- a/src/main/resources/public/einstellungen.html
+++ b/src/main/resources/public/einstellungen.html
@@ -15,7 +15,7 @@
   </head>
   <body>
     <div id="einstellungen">
-      <page-header></page-header>
+      <page-header :marker="'Einstellungen'"></page-header>
       <page-header-einstellungen v-bind:marker="'Allgemein'"></page-header-einstellungen>
       <div id="content">
         <div class="form">
