--- a/src/main/resources/public/filiale.html
+++ b/src/main/resources/public/filiale.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     <div id="filiale">
-      <page-header></page-header>
+      <page-header :marker="'Einstellungen'"></page-header>
       <page-header-einstellungen v-bind:marker="'Filiale'"></page-header-einstellungen>
       <div id="content">
         <div id="gridDiv" v-if="grid.gridColumns.length > 0">
