--- a/src/main/resources/public/kassenbuch-uebersicht.html
+++ b/src/main/resources/public/kassenbuch-uebersicht.html
@@ -17,7 +17,7 @@
   </head>
   <body>
     <div id="kassenbuecher">
-      <page-header></page-header>
+      <page-header :marker="'Kassenbuch'"></page-header>
       <page-header-kassenbuch v-bind:marker="'Uebersicht'"></page-header-kassenbuch>
       <div id="content">
         <div class="form m1">
