--- a/src/main/resources/public/kassenstand.html
+++ b/src/main/resources/public/kassenstand.html
@@ -15,7 +15,7 @@
   </head>
   <body>
     <div id="kassenstand">
-      <page-header></page-header>
+      <page-header :marker="'Kassenbuch'"></page-header>
       <page-header-kassenbuch v-bind:marker="'Kassenstand'"></page-header-kassenbuch>
       <div id="content">
         <div class="form">
