--- a/src/main/resources/public/kunden.html
+++ b/src/main/resources/public/kunden.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     <div id="kunden">
-      <page-header></page-header>
+      <page-header :marker="'Kunden'"></page-header>
       <div id="content">
         <div class="form m1">
           <div class="m2m">
