--- a/src/main/resources/public/reparatur-uebersicht.html
+++ b/src/main/resources/public/reparatur-uebersicht.html
@@ -17,7 +17,7 @@
   </head>
   <body>
     <div id="reparaturen">
-      <page-header></page-header>
+      <page-header :marker="'Reparaturen'"></page-header>
       <page-header-reparatur v-bind:marker="'Reparaturen'"></page-header-reparatur>
       <div id="content">
         <div class="form m1" v-if="kundeId === null">
