--- a/src/main/resources/public/reparatur.html
+++ b/src/main/resources/public/reparatur.html
@@ -17,7 +17,7 @@
   </head>
   <body>
     <div id="reparaturErstellen">
-      <page-header></page-header>
+      <page-header :marker="'Reparaturen'"></page-header>
       <page-header-reparatur v-bind:marker="'Erstellen'"></page-header-reparatur>
       <div id="content">
         <div class="form m1">
