--- a/src/main/resources/public/kategorie.html
+++ b/src/main/resources/public/kategorie.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     <div id="kategorie">
-      <page-header></page-header>
+      <page-header :marker="'Inventar'"></page-header>
       <page-header-inventar v-bind:marker="'Kategorien'"></page-header-inventar>
       <div id="content">
         <div class="form m1">
