--- a/src/main/resources/public/rechnung.html
+++ b/src/main/resources/public/rechnung.html
@@ -17,7 +17,7 @@
   </head>
   <body>
     <div id="rechnungErstellen">
-      <page-header></page-header>
+      <page-header :marker="'Rechnungen'"></page-header>
       <page-header-rechnung v-bind:marker="'Erstellen'"></page-header-rechnung>
       <div id="content">
         <div class="form m1">
