--- a/src/main/resources/public/reparatur-drucken.html
+++ b/src/main/resources/public/reparatur-drucken.html
@@ -202,7 +202,7 @@
             <td width=227 style="; border-left:1px solid; border-right:medium none; border-top:1px solid; border-bottom:medium none; padding:0cm; " valign="bottom" height="30">&nbsp;</td>
             <td width=904 style="; border-top: 1px solid; border-bottom: 1px solid #000000; border-left: medium none; border-right: medium none; padding-top: 0cm; padding-bottom: 0.1cm; padding-left: 0cm; padding-right: 0cm" align="left" valign="middle" height="30" colspan="2">
               <font face="arial">
-                Ich akzeptiere die AGB und erteile den oben beschriebenen Auftrag.
+                Ich akzeptiere die Reparaturbedingungen und erteile den oben beschriebenen Auftrag.
               </font>
             </td>
             <td width=25 style="; border-top: 1px solid; border-bottom: medium none #000000; border-left: medium none; border-right: 1px solid; padding-top: 0cm; padding-bottom: 0.1cm; padding-left: 0cm; padding-right: 0cm" align="left" valign="bottom" height="30">&nbsp;</td>
