--- a/src/main/resources/public/reparatur-drucken.html
+++ b/src/main/resources/public/reparatur-drucken.html
@@ -480,8 +480,8 @@
             </td>
             <td width=904 style="; border-top: none; border-bottom: 1px solid #000000; border-left: none; border-right: none; padding-top: 0cm; padding-bottom: 0.1cm; padding-left: 0cm; padding-right: 0cm" align="left" valign="bottom" height="35">
               <font face="arial" size="4">
-                <span lang="de" v:if="!entity.expressbearbeitung">NEIN</span>
-                <span lang="de" v:if="entity.expressbearbeitung">JA</span>
+                <span lang="de" v-if="!entity.expressbearbeitung">NEIN</span>
+                <span lang="de" v-if="entity.expressbearbeitung">JA</span>
               </font>
             </td>
             <td width=25 style="border-top: none; border-bottom: 1px solid #000000; border-left: none; border-right: none; padding-top: 0cm; padding-bottom: 0.1cm; padding-left: 0cm; padding-right: 0cm" align="left" valign="bottom" height="35">
